Fixes #44, input height bug and some other color bleeding from site styling

--- a/devkit/dynamic_sheets/fate_core/sheet.scss
+++ b/devkit/dynamic_sheets/fate_core/sheet.scss
@@ -10,10 +10,10 @@
 .ds_fate_core.editable {
   table.stunts {
     tr.inactive {
-      color: darkgrey;
+      color: darkgrey !important;
       display: table-row;
       td {
-        color: darkgrey;
+        color: darkgrey !important;
       }
     }
   }
@@ -36,6 +36,7 @@
   }
   .stress_track.inactive {
     display: block;
+    background: lightgrey;
     table {
     }
     .activator {
@@ -78,18 +79,17 @@
     form.jeditable_input {
       input {
         min-width: 200px !important;
-        height: 20px !important;
+        padding: 0px;
       }
     }
   }
   .aspects {
     .sheet_title {
       form.jeditable_input {
-        height: 14px;
         input {
           min-width: 170px !important;
           max-width: 170px !important;
-          height: 20px !important;
+          padding: 0px;
         }
       }
     }
@@ -99,7 +99,7 @@
         input {
           min-width: 485px !important;
           max-width: 485px !important;
-          height: 20px !important;
+          padding: 0px;
         }
       }
     }
@@ -109,18 +109,23 @@
     input {
       z-index: 1;
       min-width: 80px !important;
+      padding: 0px;
+      height: 20px !important;
     }
     button {
       z-index: 1;
-      position:relative;
-      width: 35px;
+      position: absolute;
+      background: grey;
+      margin: 3px;
+      padding: 0px 5px;
+      height: 18px;
     }
   }
   .large_text {
     form.jeditable_input {
       input {
         min-width: 600px !important;
-        height: 20px !important;
+        padding: 0px;
       }
     }
   }
@@ -260,7 +265,7 @@
         top: 40px;
         input {
           width: 10px !important;
-          height: 20px !important;
+          padding: 0px;
         }
       }
       border: 2px solid black;
@@ -319,7 +324,8 @@
         padding-left: 3px;
         form.jeditable_input {
           position: relative;
-          top: -23px;
+          top: -1px;
+          height: 0px;
         }
       }
       .activator {
@@ -365,10 +371,13 @@
         top: -3px;
         left: 0px;
         form.jeditable_input {
-          height: 9px;
-          position: relative;
-          top: 10px;
-          left: -1px;
+          height: 0px;
+          position: absolute;
+          left: 3px;
+          input {
+            min-width: 105px !important;
+            height: 16px !important;
+          }
         }
       }
     }
@@ -377,16 +386,22 @@
       list-style: none;
       margin-left: 0px;
       margin-right: 0px;
+      font-size: 0px;
       li.inactive {
         border: 2px solid grey;
       }
+      li.active {
+        position: relative;
+        top: -4px;
+      }
       li {
-        display:inline;
+        display:inline-block;
         border: 2px solid black;
         margin:0px 2px;
+        @include width_calc('(100% - 66px)/6');
         span {
           display: inline-block;
-          @include width_calc('(100% - 94px)/6');
+          position: relative;
           padding-left: 2px;
           height: 19px;
           font-size: 13px;
@@ -498,7 +513,7 @@
         position: relative;
         top: -24px;
         input {
-          height: 16px !important;
+          padding: 0px;
         }
       }
       .activator {
